// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentTerm When using custom options renders when not using an option in nameMap but provides a custom props instead 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class="ncf__payment-term__options-grid">
    <div class="ncf__payment-term__item o-forms-input--radio-round ncf__payment-term__item--discount">
      <input type="radio"
             id="270"
             name="paymentTerm"
             value="270"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="270"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__discount">
          Best offer - 33% off RRP
        </span>
        <span class="ncf__payment-term__title ncf__payment-term__title--large-price">
          Annual
          <span class="ncf__regular ncf__payment-term__sub-title">
            (Renews annually unless cancelled)
          </span>
        </span>
        <div>
          <span class="ncf__payment-term__large-price">
            € 270.00
          </span>
          <p class="ncf__payment-term__charge-on-text">
            You will be charged on May 1, 2021
          </p>
        </div>
      </label>
    </div>
    <div class="ncf__payment-term__item o-forms-input--radio-round ncf__payment-term__item--discount">
      <input type="radio"
             id="300"
             name="paymentTerm"
             value="300"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
             checked
      >
      <label for="300"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__discount">
          Save 10% off RRP
        </span>
        <span class="ncf__payment-term__title ncf__payment-term__title--large-price">
          12 Month Subscription
        </span>
        <div>
          <span class="ncf__payment-term__large-price">
            € 300.00
          </span>
          <p class="ncf__payment-term__charge-on-text">
            You will be charged on May 1, 2021
          </p>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Annual
        </span>
        <div class="ncf__payment-term__description">
          Single
          <span class="ncf__payment-term__price ncf__strong">
            £20.00
          </span>
          payment
          <p class="ncf__payment-term__renews-text">
            Renews annually unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option with discount 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round ncf__payment-term__item--discount">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__discount">
          Save 25% off off RRP
        </span>
        <span class="ncf__payment-term__title">
          Annual
        </span>
        <div class="ncf__payment-term__description">
          Single
          <span class="ncf__payment-term__price ncf__strong">
            £20.00
          </span>
          payment
          <p class="ncf__payment-term__renews-text">
            Renews annually unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option with isTrial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Annual
        </span>
        <div class="ncf__payment-term__description">
          4 weeks for
          <span class="ncf__payment-term__trial-price">
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per year after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option with monthlyPrice 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Annual
        </span>
        <div class="ncf__payment-term__description">
          Single
          <span class="ncf__payment-term__price ncf__strong">
            £20.00
          </span>
          payment
          <span class="ncf__payment-term__equivalent-price">
            That’s equivalent to
            <span class="ncf__payment-term__monthly-price">
              £1.67
            </span>
            per month
          </span>
          <p class="ncf__payment-term__renews-text">
            Renews annually unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option with selected 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
             checked
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Annual
        </span>
        <div class="ncf__payment-term__description">
          Single
          <span class="ncf__payment-term__price ncf__strong">
            £20.00
          </span>
          payment
          <p class="ncf__payment-term__renews-text">
            Renews annually unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm annual option render option with trial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="annual"
             name="paymentTerm"
             value="annual"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="annual"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Annual
        </span>
        <div class="ncf__payment-term__description">
          6 weeks for
          <span class="ncf__payment-term__trial-price">
            £1.00
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per year after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Monthly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month
          <p class="ncf__payment-term__renews-text">
            Renews monthly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option with discount 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round ncf__payment-term__item--discount">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__discount">
          Save 25% off off RRP
        </span>
        <span class="ncf__payment-term__title">
          Monthly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month
          <p class="ncf__payment-term__renews-text">
            Renews monthly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option with isTrial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Monthly
        </span>
        <div class="ncf__payment-term__description">
          4 weeks for
          <span class="ncf__payment-term__trial-price">
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option with monthlyPrice 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Monthly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month
          <p class="ncf__payment-term__renews-text">
            Renews monthly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option with selected 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
             checked
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Monthly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month
          <p class="ncf__payment-term__renews-text">
            Renews monthly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm monthly option render option with trial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="monthly"
             name="paymentTerm"
             value="monthly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="monthly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Monthly
        </span>
        <div class="ncf__payment-term__description">
          6 weeks for
          <span class="ncf__payment-term__trial-price">
            £1.00
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per month after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Quarterly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter
          <p class="ncf__payment-term__renews-text">
            Renews quarterly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option with discount 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round ncf__payment-term__item--discount">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__discount">
          Save 25% off off RRP
        </span>
        <span class="ncf__payment-term__title">
          Quarterly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter
          <p class="ncf__payment-term__renews-text">
            Renews quarterly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option with isTrial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Quarterly
        </span>
        <div class="ncf__payment-term__description">
          4 weeks for
          <span class="ncf__payment-term__trial-price">
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option with monthlyPrice 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Quarterly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter
          <p class="ncf__payment-term__renews-text">
            Renews quarterly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option with selected 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
             checked
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Quarterly
        </span>
        <div class="ncf__payment-term__description">
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter
          <p class="ncf__payment-term__renews-text">
            Renews quarterly unless cancelled
          </p>
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm quarterly option render option with trial 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
    <div class="ncf__payment-term__item o-forms-input--radio-round">
      <input type="radio"
             id="quarterly"
             name="paymentTerm"
             value="quarterly"
             class="o-forms-input__radio o-forms-input__radio--right ncf__payment-term__input"
      >
      <label for="quarterly"
             class="o-forms-input__label ncf__payment-term__label"
      >
        <span class="ncf__payment-term__title">
          Trial: Premium Digital - Quarterly
        </span>
        <div class="ncf__payment-term__description">
          6 weeks for
          <span class="ncf__payment-term__trial-price">
            £1.00
          </span>
          <br>
          Unless you cancel during your trial you will be billed
          <span class="ncf__payment-term__price">
            £20.00
          </span>
          per quarter after the trial period.
        </div>
      </label>
    </div>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm render with defaults 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;

exports[`PaymentTerm render with isPrintOrBundle 1`] = `
<div id="paymentTermField"
     class="o-forms__group ncf__payment-term"
>
  <div class>
  </div>
  <div class="ncf__payment-term__legal">
    <p>
      With all subscription types, we will automatically renew your subscription using the payment method provided unless you cancel before your renewal date.
    </p>
    <p>
      We will notify you at least 14 days in advance of any changes to the price in your subscription that would apply upon next renewal. Find out more about our cancellation policy in our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/terms-and-conditions/"
         title="FT Legal Terms and Conditions help page"
         target="_blank"
         rel="noopener noreferrer"
      >
        Terms &amp; Conditions
      </a>
      .
    </p>
  </div>
</div>
`;
